# cg

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  launch.vs.json
include/veekay/: application.hpp  graphics.hpp  input.hpp  types.hpp  veekay.hpp
shaders/: shader.frag  shader.vert
source/: graphics.cpp  input.cpp  veekay.cpp
testbed/: CMakeLists.txt  main.cpp
veekay/: CMakeLists.txt
veekay/include/veekay/: graphics.hpp  types.hpp
veekay/shaders/: shader.frag  shader.vert  shadow.frag  shadow.vert
veekay/source/: graphics.cpp  veekay.cpp
veekay/testbed/: CMakeLists.txt  main.cpp
